# zz

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  deny.toml  dist-workspace.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release-plz.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: jobs.rs  lib.rs  main.rs  output.rs  remote.rs
crates/cli/tests/e2e/: e2e_approval_model_flags.rs  e2e_auth.rs  e2e_cli_flags.rs  e2e_config.rs  e2e_config_set.rs  e2e_continue_flag.rs  e2e_doctor.rs  e2e_dry_run_flag.rs  e2e_eval.rs  e2e_exec_file_prompt.rs  e2e_exec_include.rs  e2e_gen0_gen1_gate.rs  e2e_init.rs  e2e_json_pretty.rs  e2e_no_skills_flag.rs  e2e_output_flag.rs  e2e_output_styles.rs  e2e_plan_mode.rs  e2e_plugins.rs  e2e_prd100_effort.rs  e2e_prd100_model_command.rs  e2e_prd105_net_isolation.rs  e2e_prd11_anthropic_provider.rs  e2e_prd1_help.rs  e2e_prd1_tui_helloworld.rs  e2e_prd1_version.rs  e2e_prd2_exec_help.rs  e2e_prd2_exec_jsonl.rs  e2e_prd2_exec_stdin.rs  e2e_prd3_http_error.rs  e2e_prd3_llm_call.rs  e2e_prd3_no_api_key.rs  e2e_prd3_streaming.rs  e2e_prd4_max_turns.rs  e2e_prd4_multi_turn.rs  e2e_prd4_tool_events.rs  e2e_prd4_tools_in_request.rs  e2e_prd5_approval_deny.rs  e2e_prd5_approval_never.rs  e2e_prd6_compaction.rs  (+18 more)
crates/compaction/: Cargo.toml
crates/compaction/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: auto_test_hooks.rs  composite_hook.rs  config.rs  hook_config.rs  hooks.rs  http_hook.rs  lib.rs  system_prompt.rs
crates/eval/: Cargo.toml
crates/eval/src/: git.rs  lib.rs  swebench.rs
crates/exec/: Cargo.toml
crates/exec/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  auth.rs  fallback.rs  gemini.rs  lib.rs  providers.rs  sse.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/multi-agent/: Cargo.toml
crates/multi-agent/src/: lib.rs  spawn_agent_tool.rs  steer.rs  thread.rs
crates/multi-agent/tests/: prd97_integration.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: approval.rs  landlock.rs  lib.rs  network.rs  seccomp.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: apply_patch.rs  bash.rs  edit_file.rs  fuzzy_search.rs  git_commit.rs  git_pr.rs  git_push.rs  git_worktree.rs  glob.rs  grep.rs  lib.rs  mcp_adapter.rs  mcp_server.rs  read_file.rs  repo_map.rs  snapshot.rs  web_fetch.rs  web_search.rs  write_file.rs
crates/tui/: Cargo.toml
crates/tui/src/: agent_nav.rs  agent_picker.rs  agent_tree.rs  app.rs  approval.rs  connect.rs  diff.rs  event.rs  lib.rs  markdown.rs  model_catalog.rs  model_picker.rs  skills_browser.rs  slash.rs  slash_menu.rs  status_indicator.rs  strip_ansi.rs  theme.rs  ui.rs
crates/tui/src/composer/: mod.rs  state.rs  view.rs
crates/tui/src/snapshots/: zerozero_tui__ui__tests__render_empty_app.snap  zerozero_tui__ui__tests__render_input_buffer.snap  zerozero_tui__ui__tests__render_streaming.snap  zerozero_tui__ui__tests__render_with_diff_view.snap  zerozero_tui__ui__tests__render_with_messages.snap
eval/: README.md  run.sh
eval/tasks/add-feature-with-tests/: scoring.md  task.md  verify.sh
eval/tasks/add-feature-with-tests/expected/: Cargo.toml
eval/tasks/add-feature-with-tests/expected/src/: lib.rs
eval/tasks/add-feature-with-tests/fixture/src/: lib.rs
eval/tasks/add-function/: scoring.md  task.md  verify.sh
eval/tasks/add-function/expected/src/: lib.rs
eval/tasks/bug-fix-multi-step/: scoring.md  task.md  verify.sh
eval/tasks/bug-fix-multi-step/expected/: Cargo.toml
eval/tasks/bug-fix-multi-step/expected/src/: lib.rs
eval/tasks/bug-fix-multi-step/fixture/src/: lib.rs
eval/tasks/bugfix-logic-error/: scoring.md  task.md  verify.sh
eval/tasks/bugfix-logic-error/expected/src/: lib.rs
eval/tasks/bugfix-logic-error/fixture/: Cargo.toml
eval/tasks/bugfix-logic-error/fixture/src/: lib.rs
eval/tasks/fix-typo/: scoring.md  task.md  verify.sh
eval/tasks/fix-typo/fixture/src/: main.rs
eval/tasks/multi-file-refactor/: scoring.md  task.md  verify.sh
eval/tasks/multi-file-refactor/expected/src/: main.rs  validator.rs
eval/tasks/multi-file-refactor/fixture/src/: main.rs
eval/tasks/refactor-error-handling/: scoring.md  task.md  verify.sh
eval/tasks/refactor-error-handling/expected/: Cargo.toml
eval/tasks/refactor-error-handling/expected/src/: lib.rs
eval/tasks/refactor-error-handling/fixture/src/: lib.rs
eval/tasks/refactor-extract/: scoring.md  task.md  verify.sh
eval/tasks/refactor-extract/expected/src/: main.rs
eval/tasks/refactor-extract/fixture/src/: main.rs
eval/tasks/tdd-add-function/: scoring.md  task.md  verify.sh
eval/tasks/tdd-add-function/expected/src/: lib.rs
eval/tasks/tdd-add-function/fixture/src/: lib.rs
scripts/: zz-test
