[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/cli"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
repository = "https://github.com/doanbactam/zz"
homepage = "https://github.com/doanbactam/zz"
description = "ZeroZero — a CLI coding agent written in 100% Rust"
readme = "../../README.md"
keywords = ["cli", "agent", "ai", "coding", "rust"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
portable-pty = "0.9"
assert_cmd = "2"
predicates = "3"
insta = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
async-trait = "0.1"
futures = "0.3"
wiremock = "0.6"
pulldown-cmark = "0.13"
syntect = { version = "5.3", features = ["regex-fancy", "default-syntaxes", "default-themes"] }
