[package]
name = "zerozero-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "io-util", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
