[package]
name = "zerozero-multi-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
zerozero-core = { path = "../core" }
zerozero-llm = { path = "../llm" }
zerozero-exec = { path = "../exec" }
zerozero-tools = { path = "../tools" }
zerozero-sandbox = { path = "../sandbox" }
zerozero-compaction = { path = "../compaction" }
zerozero-session = { path = "../session" }

[dev-dependencies]
insta.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
