[package]
name = "zerozero-plugins"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "rt", "macros"] }
zerozero-tools = { path = "../tools" }

[dev-dependencies]
tempfile = "3"
